--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,10 +1,10 @@
 name: First Workflow
-on: workflow_dispatch        # this the trigger 
-jobs: 
+on: workflow_dispatch
+jobs:
   first-job:
     runs-on: ubuntu-latest
-      steps:
-        -  name: Print greeting
-           run: echo "Hello World !"
-        -  name: Print goodbye
-           run: echo "Done - bye!"
+    steps:
+      - name: Print greeting
+        run: echo "Hello World!"
+      - name: Print goodbye
+        run: echo "Done - bye!"
